[package]
name = "genpio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }
dirs = "1.0"
